[package]
name = "proj"
description = "Rust bindings for proj.4"
version = "0.3.0"
authors = [
  "Corey Farwell <coreyf@rwell.org>",
  "Alex Morega <alex@grep.ro>",
]
repository = "https://github.com/georust/rust-proj"
keywords = ["proj", "projection", "osgeo", "geo"]
license = "Apache-2.0"

[dependencies]
libc = "0.2.39"
num-traits = "^0.1"
geo-types ="0.4.2"
